# D-Racer

./: .gitignore  README.md  best_320_int8.onnx
bagfile/: bagfile.md
docs/: [1] D-Racer Hardware Assembly Guide.md  [2] Development Environment Setup Guide.md  [3] Claude Code CLI Guide.md  [4] D-Racer ROS2 Package Build Guide.md  [5] Monitor Package.md  [6] Battery Package.md  [7] Camera Package.md  [8] Joystick & Control Package.md  [9] OpenCV Package.md
src/: data_acquisition.sh
src/battery/: package.xml  setup.py
src/battery/battery/: battery_node.py
src/battery_msgs/: CMakeLists.txt  package.xml
src/battery_msgs/msg/: Battery.msg
src/camera/: package.xml  setup.py
src/camera/camera/: camera_node.py  recorder_node.py
src/camera/launch/: recorder.launch.py
src/config/: decision.yaml  vehicle_config.yaml
src/control/: package.xml  setup.py
src/control/control/: control_node.py  control_node.py.tmp.4835.cc156b31d385
src/control/launch/: auto_driving.launch.py  manual_driving.launch.py
src/control_msgs/: CMakeLists.txt  package.xml
src/control_msgs/msg/: Control.msg
src/inference/: package.xml  setup.py
src/inference/inference/: decision_arrow_node.py  decision_core.py  decision_light_node.py  decision_node.py  decision_obstacle_node.py  lane_core.py  lane_node.py  object_node.py
src/inference/launch/: arrow_test.launch.py  lane_test.launch.py  light_test.launch.py  obstacle_test.launch.py  race.launch.py
src/inference/test/: test_decision_core.py  test_lane_core.py  test_lane_core_windows.py
src/inference_msgs/: CMakeLists.txt  package.xml
src/inference_msgs/msg/: Detection.msg  LaneState.msg
src/joystick/: package.xml  setup.cfg  setup.py
src/joystick/joystick/: joystick_node.py
src/joystick_msgs/: CMakeLists.txt  package.xml
src/joystick_msgs/msg/: Joystick.msg
src/monitor/: package.xml  setup.py
src/monitor/monitor/: __init__.py  flask_app_factory.py  graph_utils.py  image_utils.py  monitor_node.py  monitor_state.py
src/monitor/monitor/static/css/: style.css
src/monitor/monitor/static/js/: app.js
src/monitor/monitor/templates/: index.html
src/monitor/test/: test_graph_view.py
src/opencv/: package.xml  setup.cfg  setup.py
src/opencv/opencv/: opencv_node.py
src/topst_utils/: package.xml  setup.cfg  setup.py
src/topst_utils/topst_utils/: d3racer.py  gamepads.py  ina219.py  pca9685.py
tools/: extract_frames.py
